--- a/src/pages/Home/Instractor/Instructors.css
+++ b/src/pages/Home/Instractor/Instructors.css
@@ -1,3 +1,20 @@
 .bg {
     background-color: #889EAF;
 }
+
+.cart:hover {
+    box-shadow: 10px 5px 8px .6 white!important;
+    transform: scaleY(1.1)!important;
+    -webkit-transform: scaleY(1.1)!important;
+    -moz-transform: scaleY(1.1)!important;
+    -ms-transform: scaleY(1.1)!important;
+    -o-transform: scaleY(1.1)!important;
+}
+
+.cart {
+    transition: all.5s;
+    -webkit-transition: all.5s;
+    -moz-transition: all.5s;
+    -ms-transition: all.5s;
+    -o-transition: all.5s;
+}
