--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,3 +1,11 @@
 .contact-bg {
     background-color: #091353!important;
 }
+
+input::placeholder {
+    color: grey!important;
+}
+
+input {
+    border: none;
+}
