--- a/src/pages/Details/Details.css
+++ b/src/pages/Details/Details.css
@@ -2,3 +2,11 @@
     width: 100%;
     height: 100%;
 }
+
+.details-bg {
+    background-color: #091353!important;
+}
+
+.article-section {
+    background-color: #191A19!important;
+}
